@@ -17,6 +17,34 @@
 			<plugins>
 				<plugin>
 					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-compiler-plugin</artifactId>
+					<configuration>
+						<deriveReleaseCompilerArgumentFromTargetLevel>false</deriveReleaseCompilerArgumentFromTargetLevel>
+						<compilerId>javac</compilerId>
+						<compilerArgs combine.self="override">
+							<arg>--add-exports</arg>
+							<arg>java.base/java.lang=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+						</compilerArgs>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
 					<artifactId>tycho-surefire-plugin</artifactId>
 					<version>${tycho-version}</version>
 					<configuration>
@@ -41,7 +69,7 @@
 				</property>
 			</activation>
 			<properties>
-				<lombokArgs>-javaagent:${basedir}/lib/lombok-1.18.28.jar</lombokArgs>
+				<lombokArgs>-javaagent:${basedir}/lib/lombok-1.18.32.jar</lombokArgs>
 			</properties>
 			<build>
 				<plugins>
@@ -53,9 +81,20 @@
 								<artifactItem>
 									<groupId>org.projectlombok</groupId>
 									<artifactId>lombok</artifactId>
-									<version>1.18.28</version>
+									<version>1.18.32</version>
 								</artifactItem>
 							</artifactItems>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-toolchains-plugin</artifactId>
+						<configuration>
+							<toolchains>
+								<jdk>
+									<id>JavaSE-23</id>
+								</jdk>
+							</toolchains>
 						</configuration>
 					</plugin>
 				</plugins>
